# fastapi-base-template

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  project_properties.json  pyproject.toml
.github/workflows/: ci.yaml
app/: __init__.py  main.py
app/route/: health.py  string_operations.py
app/service/: string_service.py
app/service/implementation/: string_service.py
tests/service/implementation/: test_string_service.py
