[tool.poetry]
name = "fastapi-ml-template"
version = "0.1.0"
description = ""
authors = ["jabertuhin <jabertuhin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
fastapi = "0.78.0"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
