[project]
name = "fastapi-base-template"
version = "0.1.0"
description = ""
authors = [{name = "jabertuhin", email = "jabertuhin@gmail.com"}]
requires-python = ">=3.10.6"
dependencies = [
    "fastapi==0.129.0",
    "uvicorn>=0.18.2",
    "gunicorn>=20.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=3.0.0",
    "pre-commit>=2.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
